[gd_scene load_steps=2 format=3 uid="uid://dgc5uubx1iqfm"]

[ext_resource type="Script" uid="uid://c5at1vbs1km8x" path="res://World/Menus/MainMenu.gd" id="1_l81wo"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_l81wo")

[node name="TopLevelMenu" type="MarginContainer" parent="."]
offset_right = 70.0
offset_bottom = 101.0

[node name="VBoxContainer" type="VBoxContainer" parent="TopLevelMenu"]
layout_mode = 2

[node name="Start" type="Button" parent="TopLevelMenu/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Settings" type="Button" parent="TopLevelMenu/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="TopLevelMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="NewGameMenu" type="MarginContainer" parent="."]
offset_right = 157.0
offset_bottom = 136.0

[node name="VBoxContainer" type="VBoxContainer" parent="NewGameMenu"]
layout_mode = 2

[node name="NewGame" type="Button" parent="NewGameMenu/VBoxContainer"]
layout_mode = 2
text = "New Game
"

[node name="LoadGame" type="Button" parent="NewGameMenu/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="ReloadLastSave" type="Button" parent="NewGameMenu/VBoxContainer"]
layout_mode = 2
text = "Load Last Save"

[node name="Back" type="Button" parent="NewGameMenu/VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu"

[connection signal="pressed" from="TopLevelMenu/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="TopLevelMenu/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="TopLevelMenu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="NewGameMenu/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="NewGameMenu/VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="NewGameMenu/VBoxContainer/ReloadLastSave" to="." method="_on_reload_last_save_pressed"]
[connection signal="pressed" from="NewGameMenu/VBoxContainer/Back" to="." method="_on_back_pressed"]
